--- a/Iro-RGB.html
+++ b/Iro-RGB.html
@@ -12,7 +12,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
         }
         
         .container {
